<resources>
    <string name="app_name">Morse Mentor</string>
    <string name="training">Training</string>
    <string name="tools">Tools</string>
    <string name="options">Options</string>
    <string name="englishToMorse">English to Morse</string>
    <string name="MorseToEnglish">Morse to English</string>
    <string name="translate">Translate</string>
    <string name="translateText">Please enter the text you would like translated</string>
    <string name="sos">SOS</string>
    <string name="morseCode">Morse Code Mentor</string>
    <string name="reset">Reset</string>


    <string name="morse_pad">Morse Pad</string>

    <!--English to Morse-->
    <string name="text_to_translate_hint">Enter text to translate</string>
    <string name="english_to_morse_light">Light</string>
    <!--English to Morse-->


    <!--Results-->
    <string name="q_name">Q Number</string>
    <string name="answer">Answer</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <!--Results-->

    <!--Results Adapter-->
    <string name="question_number">Question</string>
    <!--Results Adapter-->

    <!--Introduction-->
    <string name="previous">Previous</string>
    <string name="next_introduction">Next</string>
    <string name="description">Image Description</string>
    <!--Introduction-->


    <!--Morse Pad-->
    <string name="light_morse_pad">Light</string>
    <string name="sound_morse_pad">Sound</string>
    <string name="vibrate_morse_pad">Vibrate</string>
    <!--Morse Pad-->

    <!--Call Vibration-->
    <string name="vibrate_incoming">Incoming Caller Vibration</string>
    <string name="vibrate_instructions">This feature allows the device to vibrate the name or number of incoming phone calls.
     If the caller is one of your contacts then the name will be vibrated, if not then the incoming phone number will be vibrated.

    Whenever a call is received the device will vibrate 3 times before the actual name or number of the caller is vibrated. This lets you know that the following
    vibrations are going to be Morse code.</string>
    <string name="enable_vibration">Enabled</string>
    <!--Call Vibration-->

    <!--Morse_to_English-->
    <string name="morse_to_be_converted">Add Morse to be converted</string>
    <string name="dot">dot</string>
    <string name="space">space</string>
    <string name="convert">convert</string>
    <string name="dash">dash</string>
    <!--Morse_to_English-->

    <!--Screen_Flash-->
    <string name="start_screen_flash">Start screen flash</string>
    <string name="text_to_flash">Text to Flash</string>
    <!--Screen Flash-->

    <!--SOS-->
    <string name="sos_sos">SOS</string>
    <string name="sos_audio">Audio</string>
    <string name="sos_light">Light</string>
    <string name="sos_vibrate">Vibrate</string>
    <string name="sos_flash">Flash</string>
    <!--SOS-->

    <!--test-->
    <string name="test_start">Start</string>
    <string name="seconds_remaining">Seconds remaining:</string>
    <string name="time_up">Time up</string>
    <string name="q">Q</string>
    <!--test-->

    <!--tools-->
    <string name="tools_morse_tools">Morse Tools</string>
    <string name="tools_open_screen_flash">Screen Flash</string>
    <string name="tools_vibrate">Caller Vibration</string>
    <!--tools-->

    <!--training-->
    <string name="training_unlock">Stage locked</string>
    <string name="training_test">Test</string>
    <!--training-->

    <!--training_trail-->
    <string name="training_trail_next">Next</string>
    <string name="training_trail_previous">Previous</string>
    <!--training_trail-->

    <!--Options-->
    <string name="pref_title_voice">Enable voice</string>
    <string name="pref_title_dialogs">Enable dialogs</string>
    <string name="pref_title_progress_bar">Enable progress bar</string>
    <string name="On">ON</string>
    <string name="Off">OFF</string>
    <string name="pref_description_voice">Voice Assist</string>
    <string name="pref_description_Dialogs">Dialogs</string>
    <string name="pref_description_ProgressBar">Progress Bar</string>
    <string name="fast_screen_flash">Fast screen flash</string>
    <string name="morse_code_level">Morse code level</string>
    <string name="language_selection">Language selection</string>
    <string name="data_analytics">Data Analytics</string>
    <!--Options-->


    <!--Finished Trail-->
    <string name="finished_section">Congratulations! You completed the</string>
    <string name="section">section. In order to unlock the next section you must successfully complete the test, why not give it ago?!</string>
    <!--Finished Trail-->


    <!--Training Type-->
    <string name="transmit">Training Trail</string>
    <string name="receive">Receive</string>
    <string name="audio">Audio</string>

    <string name="morse_code_training">Morse Training</string>
    <!--Training Type-->

    <!--Receive-->
    <string name="start_receive">Start Receiving</string>
    <string name="press_to_see_answer">Press to see the answer</string>
    <!--Receive-->


</resources>
