<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Tools.MorseToEnglish">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterMorse"
        android:textSize="20sp"
        android:background="@drawable/custom_design"
        android:layout_alignParentTop="true"
        android:hint="@string/morse_to_be_converted"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/convertedMorse"
        android:textSize="20sp"
        android:layout_below="@+id/enterMorse"
        android:background="@drawable/custom_design"
        android:layout_marginTop="89dp"
        android:layout_alignEnd="@+id/enterMorse"
        android:layout_alignParentStart="true" />

    <com.gc.materialdesign.views.ButtonFlat
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:id="@+id/button5"
        android:onClick="dot"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp" />

<com.gc.materialdesign.views.ButtonFlat
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:id="@+id/button6"
        android:layout_alignBottom="@+id/button5"
        android:layout_centerHorizontal="true"
        android:onClick="space" />

<com.gc.materialdesign.views.ButtonFlat
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dash"
        android:id="@+id/button7"
        android:layout_alignTop="@+id/button6"
        android:layout_alignParentEnd="true"
        android:onClick="dash" />

<com.gc.materialdesign.views.ButtonFlat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:onClick="displayConvertedMorse"
        android:id="@+id/button10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
