<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Sos.Sos">

<com.gc.materialdesign.views.ButtonFlat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos_sos"
        android:id="@+id/button9"
        android:background="#1E88E5"
        android:onClick="startSOS"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewFlash"
        android:minWidth="380dp"
        android:background="#1E88E5"
        android:minHeight="180dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/description"
        android:layout_above="@+id/switchAudio" />

    <com.gc.materialdesign.views.Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchAudio"
        android:checked="false"
        android:background="#1E88E5"
        android:layout_above="@+id/button9"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="48dp" />

    <com.gc.materialdesign.views.Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchFlash"
        android:checked="false"
        android:background="#1E88E5"
        android:layout_alignTop="@+id/switchVibrate"
        android:layout_alignParentEnd="true" />

    <com.gc.materialdesign.views.Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchVibrate"
        android:checked="false"
        android:background="#1E88E5"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <com.gc.materialdesign.views.Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchLight"
        android:checked="false"
        android:background="#1E88E5"
        android:layout_alignTop="@+id/switchAudio"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sos_audio"
        android:id="@+id/textView3"
        android:layout_below="@+id/switchLight"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sos_light"
        android:id="@+id/textView6"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignStart="@+id/switchFlash" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sos_vibrate"
        android:id="@+id/textView7"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/switchVibrate"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sos_flash"
        android:id="@+id/textView8"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignStart="@+id/switchFlash" />

</RelativeLayout>
