<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Tools.ScreenFlash">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewQuiz"
        android:background="#1E88E5"
        android:minWidth="380dp"
        android:contentDescription="@string/description"
        android:minHeight="200dp"
        android:layout_alignParentStart="true" />


    <com.gc.materialdesign.views.ButtonFlat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_screen_flash"
        android:id="@+id/button12"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:inputType="text"
        android:maxLines="1"
        android:layout_above="@+id/button12"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:hint="@string/text_to_flash" />
</RelativeLayout>
