<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robert.morseprototype.Tools.TrainingType">



    <com.gc.materialdesign.views.ButtonRectangle
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openTransmit"
        android:padding="15dp"
        android:text="@string/transmit"
        android:layout_below="@+id/view2"
        android:layout_alignStart="@+id/view2"
        android:layout_alignEnd="@+id/view2" />


    <com.gc.materialdesign.views.ButtonRectangle
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openReceive"
        android:padding="15dp"
        android:text="@string/receive"
        android:layout_centerVertical="true"
        android:id="@+id/view2"
        android:layout_alignEnd="@+id/textView16"
        android:layout_alignStart="@+id/textView16" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView16"
        android:textStyle="bold"
        android:text="@string/morse_code_training"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:textSize="23sp" />

</RelativeLayout>
