<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:ems="10"
        android:id="@+id/editText"
        android:background="@drawable/custom_design"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/text_to_translate_hint"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/translateText"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <com.gc.materialdesign.views.ButtonFlat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:id="@+id/translate"
        android:onClick="translate"
        android:layout_alignTop="@+id/reset"
        android:layout_alignEnd="@+id/editText"
        android:layout_toEndOf="@+id/textView12" />


    <com.gc.materialdesign.views.ButtonFlat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/reset"
        android:onClick="reset"
        android:layout_above="@+id/switch1"
        android:layout_alignStart="@+id/editText" />

    <com.gc.materialdesign.views.Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:background="#1E88E5"
        android:layout_above="@+id/textView12"
        android:layout_alignStart="@+id/textView12" />


    <com.gc.materialdesign.views.Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchAudio"
        android:background="#1E88E5"
        android:layout_below="@+id/translate"
        android:layout_toEndOf="@+id/switch1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/textView"
        android:textSize="30sp"
        android:textColor="#1E88E5"
        android:textStyle="bold"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/english_to_morse_light"
        android:id="@+id/textView12"
        android:layout_marginStart="31dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Sound"
        android:id="@+id/textView8"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/switch1" />


</RelativeLayout>
