<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/rl"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Misc.MainActivity">

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_centerVertical="true"
        android:onClick="openTraining"
        android:padding="15dp"
        android:text="@string/training"
        android:textColor="#FFFFFF" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button3"
        android:layout_alignTop="@+id/button"
        android:onClick="openTools"
        android:padding="10dp"
        android:text="@string/tools"
        android:textColor="#FFFFFF" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignTop="@+id/button4"
        android:onClick="openOptions"
        android:padding="10dp"
        android:text="@string/options"
        android:textColor="#FFFFFF" />

    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/button"
        android:layout_marginTop="23dp"
        android:onClick="openSOS"
        android:padding="15dp"
        android:text="@string/sos"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/morseCode"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/swipeTop"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/swipeRight"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/swipeLeft"
        android:layout_alignTop="@+id/swipeRight"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/swipeBottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    

</RelativeLayout>
