<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robert.morseprototype.Tools.CallVibration">


    <com.uncopt.android.widget.text.justify.JustifiedTextView
        android:id="@+id/trainingTextObjective"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:text="@string/vibrate_instructions"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/custom_design"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vibrate_incoming"
        android:textStyle="bold"
        android:textSize="23sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <com.gc.materialdesign.views.Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vibrateSwitchCall"
        android:background="#1E88E5"
        android:layout_marginBottom="135dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enable_vibration"
        android:id="@+id/textView18"
        android:layout_alignTop="@+id/vibrateSwitchCall"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp" />


</RelativeLayout>
