<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


<com.github.siyamed.shapeimageview.CircularImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/padTraining"
    android:minWidth="120dp"
    app:siBorderWidth="6dp"
    app:siBorderColor="#1e88e5"
    android:src="@drawable/blue"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true" />

 <com.gc.materialdesign.views.ProgressBarDeterminate
    android:id="@+id/trainingProgressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:indeterminate="false"
    android:layout_above="@+id/padTraining"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true" />

<TextView
    android:id="@+id/trainingMorseChar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textSize="40sp"
    android:textStyle="bold"
    android:layout_marginBottom="43dp"
    android:layout_above="@+id/tickTwoTraining"
    android:layout_centerHorizontal="true"
    android:textColor="#1E88E5" />

<TextView
    android:id="@+id/trainingTextChar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="40sp"
    android:textStyle="bold"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:layout_below="@+id/trainingTextObjective"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="46dp"
    android:textColor="#1E88E5"/>

<com.uncopt.android.widget.text.justify.JustifiedTextView
    android:id="@+id/trainingTextObjective"
    android:layout_width="wrap_content"
    android:textStyle="bold"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:background="@drawable/custom_design"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

<com.gc.materialdesign.views.ButtonFlat
    android:id="@+id/trainingButtonPrev"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:background="#1E88E5"
    android:onClick="onPreviousClicked"
    android:text="@string/training_trail_previous"
    android:width="100dp"
    android:layout_above="@+id/trainingProgressBar"
    android:layout_toStartOf="@+id/tickTwoTraining" />

<com.gc.materialdesign.views.ButtonFlat
    android:id="@+id/trainingButtonNext"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="onNextClicked"
    android:text="@string/training_trail_next"
    android:width="100dp"
    android:background="#1E88E5"
    android:layout_above="@+id/trainingProgressBar"
    android:layout_toEndOf="@+id/tickTwoTraining" />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tickOneTraining"
    android:src="@drawable/blank_tick"
    android:contentDescription="@string/description"
    android:layout_above="@+id/trainingButtonPrev"
    android:layout_alignStart="@+id/trainingButtonPrev" />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tickTwoTraining"
    android:src="@drawable/blank_tick"
    android:contentDescription="@string/description"
    android:layout_above="@+id/trainingButtonPrev"
    android:layout_centerHorizontal="true" />

 <ImageView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/tickThreeTraining"
     android:src="@drawable/blank_tick"
     android:contentDescription="@string/description"
     android:layout_above="@+id/trainingButtonNext"
     android:layout_alignEnd="@+id/trainingButtonNext" />


</RelativeLayout>

